--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <body>
         <canvas id="canvas" width="700" height="700"></canvas>
     </body>
-    <script src="js/constants.js"></script>
+    <!-- classes -->
     <script src="js/classes/Room.js"></script>
     <script src="js/classes/MiscTypes.js"></script>
     <script src="js/classes/Renderer.js"></script>
+    <script src="js/classes/Entity.js"></script>
+    <script src="js/classes/Path.js"></script>
+
+    <script src="js/constants.js"></script>
     <script src="js/main.js"></script>
 </html>
